--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
   - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 install:
     - dep ensure
+before_script:
+    - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/)
 script:
     - test -z $(gofmt -s -l $GO_FILES)
     - make test
